changes before class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="frame">
-        <main></main>
+        <div class="spot">
+            <main></main>
+        </div>
+        
     </div>
 </div>
 </body>
